--- a/index.html
+++ b/index.html
@@ -6,4 +6,8 @@
   <div class="container">
   </div>
 </body>
-<script src="main.js"></script>
+<script src="https://www.google.com/jsapi" type="text/javascript"></script>
+<script>
+	var userinfo ={}; 
+</script>
+<script src="main.js"></script>;
